third test finished

--- a/react-test-3/.env
+++ b/react-test-3/.env
@@ -1,1 +1,4 @@
-OMBD_APIAPI_KEY=2ebfa5f9
+VITE_OMBD_API_KEY=2ebfa5f9
+VITE_API_URL=https://www.omdbapi.com/
+
+midu repo: https://github.com/midudev/aprendiendo-react/blob/master/projects/05-react-buscador-peliculas/README.md
